--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -25,15 +25,12 @@ jobs:
       run: go build -v ./...
 
     - name: Test
-      run: go test -v ./...
+      run: |
+        go test -v ./... -covermode=count -coverprofile=coverage.out
+        go tool cover -html=coverage.out -o=coverage.html
 
-    - name: Update coverage report
-      uses: ncruces/go-coverage-report@v0
+    - name: Archive code coverage results
+      uses: actions/upload-artifact@v3
       with:
-        report: 'true'
-        chart: 'true'
-        amend: 'false'
-      if: |
-        matrix.os == 'ubuntu-latest' &&
-        github.event_name == 'push'  
-      continue-on-error: true
+        name: code-coverage-report
+        path: coverage.html
